loading amination added on save

--- a/src/css/Lab.css
+++ b/src/css/Lab.css
@@ -27,7 +27,7 @@ input::-webkit-outer-spin-button{
   }
   
  .session_container::-webkit-scrollbar-track {
-    background: rgba(67, 56, 202,1); 
+    background: black; 
   }
 
  .session_container::-webkit-scrollbar-thumb {
