--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap');
 body{
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
     scroll-behavior: smooth;
   }
   
