--- a/src/css/App.css
+++ b/src/css/App.css
@@ -65,7 +65,18 @@ body{
   
   
   
-  
+  .h{
+    animation:animate 1s linear forwards;
+  }
+
+  @keyframes animate {
+    0%{
+      height:0
+    }
+    100%{
+      height:0%
+    }
+  }
   
   
   
